Fix modal cutoff by quick-start drawer
[RHCLOUD-17723]

--- a/src/sass/chrome.scss
+++ b/src/sass/chrome.scss
@@ -104,3 +104,11 @@ aside {
   bottom: 0;
   width: 100%;
 }
+
+// centers modals when a quick start drawer is open
+.pfext-quick-start-drawer__body {
+    .pf-c-backdrop {
+      --pf-c-backdrop--Position: absolute;
+    }
+  }
+  
